fix : overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,6 +212,7 @@
 
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 
   button,
@@ -240,4 +241,23 @@
   .animate-pulse-ring {
     animation: none !important;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: hsl(var(--background));
+}
+
+::-webkit-scrollbar-thumb {
+  background: hsl(var(--muted-foreground));
+  border-radius: 5px;
+  border: 2px solid hsl(var(--background));
+  /* Adds padding effect */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(var(--primary));
 }
